# sf3convert

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Doxyfile  Makefile  README.md  conanfile.py  docker-compose.yml  dockerfile  vcpkg-configuration.json  vcpkg.json  xml.cpp
.github/workflows/: CI.yml  release.yml
src/: main.cpp  sfconvert.cpp  sfont.cpp  sfont.h  xml.cpp  xml.h
src/sfont/: sfont.cpp  sfont.h
